fix the toggle style on mobile

--- a/app/scss/components/toggle.scss
+++ b/app/scss/components/toggle.scss
@@ -6,6 +6,7 @@
   grid-template-columns: 1fr 3rem;
   border: none;
   margin: 0;
+  padding-left: rem(0);
 
   label {
     font-size: rem(14);
